tree-sitter-mage/test/corpus/basics.txt
==================
Variable declaration
==================

conjure name = "Mage"
conjure count = 42
conjure active = true

---

(source_file
  (variable_declaration
    name: (identifier)
    value: (string
      (string_content)))
  (variable_declaration
    name: (identifier)
    value: (number))
  (variable_declaration
    name: (identifier)
    value: (boolean)))

==================
Output and errors
==================

incant "Hello, world!"
curse "Something went wrong!"

---

(source_file
  (output
    message: (string
      (string_content)))
  (error
    message: (string
      (string_content))))

==================
String interpolation
==================

incant "Hello, $name!"
incant "Welcome, ${username}!"

---

(source_file
  (output
    message: (string
      (string_content)
      (string_interpolation
        (identifier))))
  (output
    message: (string
      (string_content)
      (string_interpolation
        (identifier))
      (string_content))))

==================
Shell commands
==================

evoke "ls -la"
evoke command_var

---

(source_file
  (command
    command: (string
      (string_content)))
  (command
    command: (identifier)))

==================
Control flow
==================

if count > 10 {
  incant "Count is greater than 10"
}

loop {
  incant "Looping..."
}

---

(source_file
  (if_statement
    condition: (binary_expression
      left: (identifier)
      operator: >
      right: (number))
    consequence: (block
      (output
        message: (string
          (string_content)))))
  (loop_statement
    body: (block
      (output
        message: (string
          (string_content))))))

==================
Functions
==================

enchant greet(name) {
  incant "Hello, $name!"
}

cast greet("World")

---

(source_file
  (function_declaration
    name: (identifier)
    (parameter_list
      (identifier))
    body: (block
      (output
        message: (string
          (string_content)
          (string_interpolation
            (identifier))
          (string_content)))))
  (function_call
    name: (identifier)
    (argument_list
      (string
        (string_content))))) 